# mylab

./: .gitignore  pyproject.toml
mylab/: directoryStructure.txt  main.py  pyproject.toml
mylab/components/: __init__.py  adc.py  base.py  display.py  gain.py  lowpass_filter.py
mylab/cores/: canvas.py  properties.py
mylab/mylab/: main.py
mylab/mylab/codegen/: generator.py
mylab/mylab/components/: adc.py  base.py  gain.py  highpass_filter.py  lowpass_filter.py
mylab/mylab/core/: canvas.py  properties.py
