[project]
name = "mylab"
version = "0.1.0"
description = "Blood Pressure Simulation Model with GUI, drag-and-drop, NumPy simulation, and C code generation"
authors = [
    { name = "Suraj Sharma", email = "ss168638@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt5>=5.15",
    "numpy>=1.24",
    "matplotlib>=3.8",
    "scipy>=1.11"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
